--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 
 services:
   go_api:
+    container_name: go_api
     build:
       context: .
       dockerfile: ./docker/go.dockerfile
@@ -9,26 +10,32 @@ services:
     restart: always
     volumes:
       - type: bind
-        source: ./app
-        target: /go/src/app
+        source: .
+        target: /go/src
+    working_dir: /go/src/app
     ports:
       - "4000:4000"
-    command: reflex -r '(\.go$|go\.mod)' -s go run ./server.go
+    depends_on:
+      - mysql
+    command: sh ./start-api-server.sh
 
   mysql:
+    container_name: go_mysql
     build:
-      context: .
-      dockerfile: ./docker/mysql.dockerfile
+      context: ./docker
+      dockerfile: mysql.dockerfile
     volumes:
-       - db-data:/var/lib/mysql/data
+       - go_db_data:/var/lib/mysql
     restart: always
+    tty: true
     ports:
       - "3306:3306"
+    command: --character-set-server=utf8mb4 --explicit_defaults_for_timestamp=ON --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: develop-database
-      MYSQL_USER: user
+      MYSQL_DATABASE: develop_database
+      MYSQL_USER: sample
       MYSQL_PASSWORD: password
 
 volumes:
-  db-data:
+  go_db_data:
