--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -7,6 +7,11 @@ http {
         listen 80;
         server_name localhost;
 
+        location /gin-example {
+            proxy_pass http://gin_challenge:8080/;
+            proxy_redirect off;
+        }
+
         location /go {
             proxy_pass http://go_api:4000/;
             proxy_redirect off;
